Fix bug hero image covering nav bar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 99%;
 }
 
 .empty {
@@ -127,7 +128,6 @@ main {
   background: url(../images/ffxiv_background.webp) no-repeat center top;
   width: 100%;
   height: 400px;
-  position: relative;
 }
 
 #site-description {
@@ -136,7 +136,8 @@ main {
 }
 
 #pages {
-  text-align: right;
+  text-align: center;
+  font-size: 1.2em;
 }
 
 #pages a {
